--- a/client/public/locales/fr/translation.json
+++ b/client/public/locales/fr/translation.json
@@ -359,7 +359,9 @@
             "update": "Mettre à jour",
             "create": "Créer le projet",
             "updateSuccess": "Projet mis à jour avec succès",
-            "createSuccess": "Projet créé avec succès"
+            "createSuccess": "Projet créé avec succès",
+            "saving": "Sauvegarde...",
+            "save": "Sauvegarder"
         }
     },
     "teams": {
