feat: Enhance project and ticket management for customers
- Updated ProjectService to filter projects by organization for customer users.
- Added new Radix UI component `@radix-ui/react-collapsible` for collapsible sidebar menus.
- Implemented `getMyTickets` API call to fetch tickets specific to the logged-in customer.
- Enhanced the AppSidebar to include a collapsible section for recent projects, visible to customers.
- Created a new hook `useMyTickets` to manage ticket fetching logic.
- Updated MyTickets page to display customer-specific tickets with improved UI and loading/error handling.
- Added French translations for new UI elements related to projects and tickets.

--- a/client/public/locales/fr/translation.json
+++ b/client/public/locales/fr/translation.json
@@ -459,6 +459,12 @@
       "comments": "commentaires",
       "createdAt": "Créé le",
       "assignedTo": "Assigné à"
+    },
+    "myProjects": {
+      "title": "Mes projets",
+      "description": "Consultez les projets auxquels vous participez.",
+      "empty": "Aucun projet pour le moment",
+      "contactAdmin": "Contactez votre administrateur pour plus d'informations."
     }
 
   },
