feat(workflow): enhance transition management with validation and post-actions
- Added user-based filtering for available transitions in WorkflowService.
- Implemented transition validation logic in TransitionValidatorService.
- Introduced PostTransitionActionService to handle actions after a transition.
- Updated performTransition method to include user validation and logging.
- Created new migration for adding conditions, validators, and post-actions to workflow transitions.
- Added history logging for transitions in a new workflow_transition_history table.
- Enhanced frontend components to display validation errors and manage transitions more effectively.
- Updated translation files to support new transition-related messages.
- Refactored TaskCard and TransitionSelector components for improved user experience.

--- a/client/public/locales/fr/translation.json
+++ b/client/public/locales/fr/translation.json
@@ -482,5 +482,14 @@
       "name": "Nom",
       "category": "Catégorie"
     }
+  },
+  "issue": {
+    "transition": {
+      "selectTransition": "Choisir une transition",
+      "selectPlaceholder": "Sélectionnez une transition",
+      "apply": "Appliquer la transition",
+      "conditionsNotMet": "Conditions non remplies",
+      "blockedTransitions": "Transitions non disponibles"
+    }
   }
 }
